# RaeenOS

./: BUILD_ENVIRONMENT_SETUP.md  BUILD_SETUP_GUIDE.md  CMAKE_FIX_SUMMARY.md  CMakeLists.txt  CODE_QUALITY_RECOMMENDATIONS.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  FEATURE_IMPLEMENTATION_MATRIX.md  KERNEL_INTEGRATION_STATUS.md  MSYS2_QUICK_REFERENCE.md  Makefile  PHASE1_COMPLETION_REPORT.md  PROJECT_STATUS_REPORT.md  RAEENOS_COMPLETE_DEVELOPMENT_ROADMAP.md  RAEENOS_IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  boot.asm  bootability_analysis.bat  build.bat  build_fixed.bat  build_system.h  build_system.sh  build_test.sh  debug_kernel.c  debug_kernel.elf  fix_bootability_issues.bat  kernel.elf  linker.ld  minimal_test_kernel.c  msys2_build_helper.sh  production_boot.asm  production_kernel_stubs.c  setup_build_environment.bat  setup_msys2_environment.bat  simple_validate.ps1  test_boot_sequence.bat  test_kernel_integration.bat  test_raeenos.ps1  validate_os.ps1
bootloader/: CMakeLists.txt  Makefile  boot.asm  grub.cfg  multiboot.c
bootloader/stage1/: stage1.asm
bootloader/stage2/: stage2.asm
kernel/: CMakeLists.txt  Makefile  Makefile_production  kernel.ld  kernel_fixed.ld  kernel_fixed_32bit.ld  kernel_main_root.c.backup  pe.c  system_integration.h
kernel/ai/: ai_system.c  ai_system.h  intelligent_performance.h
kernel/app/: runtime.c
kernel/apps/: app_framework.c  package_manager.c  package_manager.h  text_editor.c
kernel/apps/calculator/: calculator_app.h
kernel/apps/terminal/: terminal_emulator.h
kernel/arch/x86_64/: exception_handler.c  exception_handler.h  gdt.c  gdt_basic.c  gdt_flush.asm  idt.c  isr_stubs.S  kernel_entry.S  kernel_entry_32.S  syscall.c  syscall.h  syscall_entry.S  tss.c  tss.h  user_mode.S
kernel/blockchain/: blockchain_system.h
kernel/boot/: boot_system.h
kernel/clustering/: high_availability.c  high_availability.h
kernel/compatibility/: compatibility.c  professional_compatibility.h
kernel/compatibility/include/: compatibility.h
kernel/compatibility/macos/: cocoa_api.h  mach_o_parser.h
kernel/compatibility/windows/: pe_parser.c  pe_parser.h  win32_api.h
kernel/core/: advanced_feature_stubs.c  bootloader_handoff.c  bootloader_handoff.h  context_switch.S  exceptions.c  interrupt_stubs.asm  interrupts.c  irq_handlers.c  kernel.ld  kernel_entry_32bit.asm.backup  kernel_infrastructure.c  kernel_main.c  kernel_main_boot.c  kernel_main_clean_production.c  kernel_main_complete.c  kernel_main_final.c  kernel_main_full_production.c  kernel_main_full_production_real.c  kernel_main_minimal.c  kernel_main_new.c  kernel_main_original.c.backup  kernel_main_production.c  kernel_main_production_simplified.c  kernel_main_real.c  kernel_main_simple.c  multiboot_header.asm  performance.c  process.c  smp.c  stdint.h  string.c  string_simple.c  syscall.c  syscall.h
kernel/core/include/: error.h  interrupts.h  kernel.h  multiboot.h  string.h  types.h
kernel/creative/: creative_suite.h
kernel/diagnostics/: system_monitor.c  system_monitor.h
kernel/drivers/: acpi.c  acpi.h  ahci.c  ata.c  ata.h  audio.c  audio.h  bluetooth.c  bluetooth.h  console.c  console.h  device_manager.c  driver_framework.c  driver_framework.h  gpu.c  keyboard.c  keyboard.h  network.c  network.h  nvme.c  nvme.h  pci.c  pci.h  sata.c  sata.h  timer.c  timer.h  usb.c  usb.h  vga.c  vga.h  vga_simple.c  wifi.c  wifi.h
kernel/drivers/audio/: audio_system.c  audio_system.h
kernel/elf/: elf_loader.c
kernel/enterprise/: enterprise_features.c  enterprise_features.h
kernel/filesystem/: devfs.c  ext4.c  fat32.c  initrd.c  ntfs.c  procfs.c  ramfs.c  ramfs.h  tmpfs.c  vfs.c  vfs.h  vfs_core.c
kernel/fs/: initrd.c
kernel/gaming/: directx_compatibility.h  gaming_system.c  gaming_system.h
kernel/graphics/: advanced_gui.h  gui.c  gui.h  gui_system.h  window_manager.c
kernel/gui/: Makefile  RAEENOS_GUI_ARCHITECTURE.md  raeen_gui_system.c  raeen_gui_system.h  test_gui_system.c
kernel/hal/: hal.c  hal_stubs.c
kernel/include/: app_framework.h  bootloader_handoff.h  drivers.h  executable_loader.h  filesystem.h  gui.h  multiboot.h  network.h  pe.h  pe_structures.h  performance.h  process.h  raeenos_stubs.h  reloc_structures.h  scheduler.h  types.h
kernel/init/: init_system.c  init_system.h
kernel/interrupts/: interrupts.h
kernel/libc/: stdlib.c  stdlib.h
kernel/memory/: demand_paging.c  heap.c  memory.h  memory_core.c  memory_integration.h  page_fault.c  physical_memory.c  physical_memory_manager.c  pmm.c  virtual_memory.c  vm.h  vm_advanced.c  vm_impl.c  vmm.c
kernel/mm/: kheap.c  memory.c  pmm.c
kernel/network/: advanced_networking.c  advanced_networking.h  network.c  network.h  network_stack.h  tcpip.c
kernel/performance/: optimizer.c  system_monitor.c
kernel/power/: power_management.h
kernel/process/: elf_loader.c  elf_loader.h  executable_loader.c  executable_loader.h  process.c  process.h  process_advanced.h  process_core.c  process_integration.c  process_lifecycle.c  scheduler.c  syscall.c  syscall.h  threading.c  threading.h  user_loader.c
kernel/quantum/: quantum_computing.h
kernel/reliability/: system_reliability.h
kernel/security/: access_control.c  advanced_security.c  authentication_system.h  enterprise_security.c  enterprise_security.h  security.c  security_core.c  security_minimal.c
kernel/shell/: shell.c  shell.h
kernel/syscall/: syscall.c  syscall_core.c  syscall_entry.S  syscall_impl.c
kernel/syscalls/: syscalls.c
kernel/users/: user_management.c  user_management.h
kernel/ux/: modern_ux.h
kernel/virtualization/: advanced_virtualization.h
kernel/xr/: extended_reality.h
tools/: CMakeLists.txt  Makefile  app.ld  build_test_program.sh  create_iso.sh  grub.cfg.in  interactive_test.c  run_tests.sh  simple_shell.c  test_program.c
tools/debugger/: raeenos_debugger.c
tools/emulator/: hardware_emulator.c
tools/mkfs/: mkfs_raeenos.c
tools/profiler/: performance_profiler.c
ui/: CMakeLists.txt  Makefile
ui/components/: desktop_shell.c  desktop_shell.h  window_manager.c  window_manager.h
ui/framework/: ui_core.c
(+82 files in other folders)
